<resources>
    <string name="_000_00_0000">000-00-0000</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_reviews_icon_content_description">About reviews from Google Maps</string>
    <string name="about_these_results_body">When searching for businesses or places near a location, Google Maps will show local results. Several factors - primarily relevance, distance and prominence - are combined to help find the best results for a search.</string>
    <string name="about_these_results_title">About these results</string>
    <string name="account_welcome_subtitle">But just football for now.</string>
    <string name="account_welcome_title">Markets\non everything.</string>
    <string name="activity_row_account_activity">Account activity</string>
    <string name="activity_row_deposit">Deposit</string>
    <string name="activity_row_liquidity_reward">Liquidity reward</string>
    <string name="activity_row_referral_bonus">Referral bonus</string>
    <string name="activity_row_trader_rebate">Trader rebate</string>
    <string name="activity_row_transfer">Transfer</string>
    <string name="activity_row_withdrawal">Withdrawal</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="res_0x7f15002a_android_credentials_type_password_credential">Password</string>
    <string name="res_0x7f15002b_androidx_credentials_type_public_key_credential">Passkey</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Polymarket</string>
    <string name="app_scheme">aerosync</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="autocomplete_error_loading_results_message">Unable to load results</string>
    <string name="autocomplete_no_matching_results_for_query">No matching places</string>
    <string name="autocomplete_search_hint">Find a place</string>
    <string name="banner_resolution_card_title">Resolution %1$d</string>
    <string name="banner_resolution_status_lost">Lost</string>
    <string name="banner_resolution_status_neutral">Neutral</string>
    <string name="banner_resolution_status_with_payout">%1$s • %2$s payout</string>
    <string name="banner_resolution_status_won">Won</string>
    <string name="banner_resolution_summary_fallback">%1$d of %2$d positions won</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_action_half_expand_description">Half expand the bottom sheet</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bottomsheet_state_collapsed">Collapsed</string>
    <string name="bottomsheet_state_expanded">Expanded</string>
    <string name="bottomsheet_state_half_expanded">Half expanded</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="categories_sheet_title">Categories</string>
    <string name="ccs_combo_1_ev_connector_type">CCS (Combo 1)</string>
    <string name="ccs_combo_2_ev_connector_type">CCS (Combo 2)</string>
    <string name="chademo_ev_connector_type">CHAdeMO</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_action_invite_to_squad">Invite to squad</string>
    <string name="chat_action_reply">Reply</string>
    <string name="chat_emoji_battle_idle_title">Celebrate your team</string>
    <string name="chat_emoji_battle_new_personal_best">New personal best!</string>
    <string name="chat_emoji_battle_personal_best">Personal best: %1$d</string>
    <string name="chat_input_placeholder">Say something...</string>
    <string name="chat_moderation_action_copy">Copy</string>
    <string name="chat_moderation_action_delete">Delete</string>
    <string name="chat_moderation_action_mod_delete">Delete message</string>
    <string name="chat_moderation_action_pin">Pin message</string>
    <string name="chat_moderation_action_report">Report</string>
    <string name="chat_moderation_action_shadow_ban">Shadow ban user</string>
    <string name="chat_moderation_action_unmute">Unmute</string>
    <string name="chat_moderation_action_unpin">Unpin message</string>
    <string name="chat_moderation_cancel">Cancel</string>
    <string name="chat_moderation_delete_confirm">Delete</string>
    <string name="chat_moderation_delete_message">This action can\'t be undone.</string>
    <string name="chat_moderation_delete_title">Delete message?</string>
    <string name="chat_moderation_fallback_user">this user</string>
    <string name="chat_moderation_mod_delete_confirm">Delete</string>
    <string name="chat_moderation_mod_delete_message">It will be removed for everyone.</string>
    <string name="chat_moderation_mod_delete_title">Delete this message?</string>
    <string name="chat_moderation_report_followup_confirm">Mute user</string>
    <string name="chat_moderation_report_followup_dismiss">No, thanks</string>
    <string name="chat_moderation_report_followup_message">Do you also want to mute %1$s?</string>
    <string name="chat_moderation_report_followup_title">Message reported</string>
    <string name="chat_moderation_shadow_ban_confirm">Shadow ban</string>
    <string name="chat_moderation_shadow_ban_message">Their messages will be hidden from everyone except themselves.</string>
    <string name="chat_moderation_shadow_ban_title">Shadow ban %1$s?</string>
    <string name="chat_pinned_messages_title">Pinned messages</string>
    <string name="chat_pinned_unpin_confirm_action">Unpin</string>
    <string name="chat_pinned_unpin_confirm_message">It will be removed from the pinned messages for everyone.</string>
    <string name="chat_pinned_unpin_confirm_title">Unpin this message?</string>
    <string name="chat_positions_carousel_title">%1$d Positions</string>
    <string name="chat_reactions_modal_add_reaction">Add reaction</string>
    <string name="chat_reconnecting_retry_action">Retry</string>
    <string name="chat_reconnecting_status">Reconnecting</string>
    <string name="chat_replying_to">Replying to</string>
    <string name="chat_share_card_buy">Buy</string>
    <string name="chat_share_position_empty_subtitle">Once you\'ve got positions on this event, you\'ll be able to share them from here.</string>
    <string name="chat_share_position_empty_title">No Positions</string>
    <string name="chat_share_position_title">Share your Position</string>
    <string name="city">City</string>
    <string name="cko_address_address_line1">Address line 1</string>
    <string name="cko_address_address_line2">Address line 2</string>
    <string name="cko_address_billing_add">Add billing address</string>
    <string name="cko_address_city">Town or City</string>
    <string name="cko_address_country">Country</string>
    <string name="cko_address_country_select">Select country</string>
    <string name="cko_address_edit_address">Edit address</string>
    <string name="cko_address_select_state">Select state</string>
    <string name="cko_address_state">State or province</string>
    <string name="cko_address_zip">ZIP or postal code</string>
    <string name="cko_card">Card</string>
    <string name="cko_card_address_use_shipping_as_billing">Use shipping address as billing address</string>
    <string name="cko_card_expiry_date">Expiry date</string>
    <string name="cko_card_expiry_date_incomplete">Expiry date is incomplete</string>
    <string name="cko_card_expiry_date_invalid">Expiry date is in the past</string>
    <string name="cko_card_expiry_date_placeholder_month">MM</string>
    <string name="cko_card_expiry_date_placeholder_year">YY</string>
    <string name="cko_card_holder_name">Cardholder name</string>
    <string name="cko_card_number">Card number</string>
    <string name="cko_card_number_invalid">Card number is incomplete</string>
    <string name="cko_card_number_not_supported">%1$s not supported</string>
    <string name="cko_card_security_code_invalid">Security code is incomplete</string>
    <string name="cko_card_security_code_placeholder">CVV</string>
    <string name="place_details_more_options_button_content_description">More options</string>
    <string name="place_details_reviews_tab_name">Reviews</string>
    <string name="place_details_see_original">See original (%1$s)</string>
    <string name="place_details_see_translation">See translation</string>
    <string name="place_details_translated_by_google">Translated by Google · </string>
    <string name="reviews_disclosure_title">Reviews aren’t verified</string>
    <string name="socure_consent_screen">ConsentScreen</string>
    <string name="socure_doc_selection">DocSelection</string>
    <string name="socure_progressScreen">ProgressScreen</string>
    <string name="socure_scannerScreen">scannerScreen</string>
</resources>