<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_orch_graph"
    app:startDestination="@+id/nav_progress_frag">
    <action
        android:id="@+id/socure_action_consent"
        app:destination="@+id/nav_consent_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/socure_action_doc_selection"
        app:destination="@+id/socure_nav_doc_selection_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/socure_action_front"
        app:destination="@+id/socure_nav_front_scanner_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/socure_action_back"
        app:destination="@+id/socure_nav_back_scanner_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/socure_action_passport"
        app:destination="@+id/socure_nav_passport_scanner_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/socure_action_selfie"
        app:destination="@+id/socure_nav_selfie_scanner_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/socure_action_selfie_autocapture"
        app:destination="@+id/socure_nav_selfie_autocapture_scanner_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/action_pop_to_consent"
        app:destination="@+id/nav_consent_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/socure_action_transition"
        app:destination="@+id/socure_nav_transition_frag"
        app:popUpTo="@+id/nav_orch_graph"
        app:popUpToInclusive="true"/>
    <fragment
        android:label="@string/socure_progressScreen"
        android:name="com.socure.docv.capturesdk.feature.progress.ui.ProgressFragment"
        android:id="@+id/nav_progress_frag"/>
    <fragment
        android:label="@string/socure_doc_selection"
        android:name="com.socure.docv.capturesdk.feature.selection.persentation.ui.DocSelectionFragment"
        android:id="@+id/socure_nav_doc_selection_frag"/>
    <fragment
        android:label="@string/socure_scannerScreen"
        android:name="com.socure.docv.capturesdk.feature.orchestrator.presentation.ui.FrontIDScannerFragment"
        android:id="@+id/socure_nav_front_scanner_frag"/>
    <fragment
        android:label="@string/socure_scannerScreen"
        android:name="com.socure.docv.capturesdk.feature.orchestrator.presentation.ui.BackIDScannerFragment"
        android:id="@+id/socure_nav_back_scanner_frag"/>
    <fragment
        android:label="@string/socure_scannerScreen"
        android:name="com.socure.docv.capturesdk.feature.orchestrator.presentation.ui.PassportScannerFragment"
        android:id="@+id/socure_nav_passport_scanner_frag"/>
    <fragment
        android:label="@string/socure_scannerScreen"
        android:name="com.socure.docv.capturesdk.feature.orchestrator.presentation.ui.SelfieScannerFragment"
        android:id="@+id/socure_nav_selfie_scanner_frag"/>
    <fragment
        android:label="@string/socure_scannerScreen"
        android:name="com.socure.docv.capturesdk.feature.orchestrator.presentation.ui.SelfieAutoCaptureScannerFragment"
        android:id="@+id/socure_nav_selfie_autocapture_scanner_frag"/>
    <fragment
        android:name="com.socure.docv.capturesdk.feature.orchestrator.presentation.ui.UnstructuredDocContainerFragment"
        android:id="@+id/socure_nav_unstructured_doc_frag"/>
    <fragment
        android:name="com.socure.docv.capturesdk.feature.orchestrator.presentation.ui.TransitionFragment"
        android:id="@+id/socure_nav_transition_frag"/>
    <fragment
        android:label="@string/socure_consent_screen"
        android:name="com.socure.docv.capturesdk.feature.consent.ui.ConsentFragment"
        android:id="@+id/nav_consent_frag">
        <action
            android:id="@+id/action_consent_privacy_dialog"
            app:destination="@+id/nav_consent_dialog"/>
    </fragment>
    <dialog
        android:name="com.socure.docv.capturesdk.feature.consent.ui.ConsentDialog"
        android:id="@+id/nav_consent_dialog">
        <argument
            android:name="privacyPolicyLink"
            app:argType="string"/>
        <argument
            android:name="closeContentDescription"
            app:argType="string"/>
    </dialog>
</navigation>
