<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reviews_tab"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <include
        android:id="@+id/consumer_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/consumer_alert"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/reviews_sort_header_container"
        android:paddingTop="?attr/placesSpacingLarge"
        android:paddingBottom="?attr/placesSpacingLarge"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?attr/placesSpacingExtraLarge"
        android:paddingEnd="?attr/placesSpacingExtraLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consumer_alert">
        <TextView
            android:textAppearance="?attr/placesTextAppearanceTitleSmall"
            android:textColor="?attr/placesColorOnSurface"
            android:id="@+id/reviews_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_details_reviews_tab_name"/>
        <TextView
            android:textAppearance="?attr/placesTextAppearanceBodySmall"
            android:textColor="?attr/placesColorOnSurfaceVariant"
            android:id="@+id/reviews_sort_order_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/placesSpacingExtraSmall"/>
    </LinearLayout>
    <View
        android:id="@+id/reviews_header_divider"
        android:background="?attr/placesColorOutlineDecorative"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/place_widget_border_width"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews_sort_header_container"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviews_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?attr/placesSpacingExtraLarge"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews_header_divider"/>
    <TextView
        android:textAppearance="?attr/placesTextAppearanceBodyMedium"
        android:textColor="?attr/placesColorOnSurface"
        android:id="@+id/about_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews_disclosure_title"
        android:paddingStart="?attr/placesSpacingExtraLarge"
        android:paddingEnd="?attr/placesSpacingExtraSmall"
        app:layout_constraintBottom_toBottomOf="@+id/about_reviews_icon"
        app:layout_constraintEnd_toStartOf="@+id/about_reviews_icon"
        app:layout_constraintTop_toTopOf="@+id/about_reviews_icon"/>
    <ImageView
        android:id="@+id/about_reviews_icon"
        android:padding="@dimen/icon_padding_for_min_touch_target_18dp_icon"
        android:layout_width="@dimen/gmp_sys_measurement_tap_target"
        android:layout_height="@dimen/gmp_sys_measurement_tap_target"
        android:src="@drawable/gs_info_vd_24"
        android:tint="?attr/placesColorOnSurfaceVariant"
        android:contentDescription="@string/about_reviews_icon_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews_list"/>
</androidx.constraintlayout.widget.ConstraintLayout>
