<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/placesSpacingExtraLarge"
    android:paddingBottom="?attr/placesSpacingLarge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/author_attribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/review_options"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/author_image"
            android:layout_width="@dimen/gmp_sys_measurement_icon_size_large"
            android:layout_height="@dimen/gmp_sys_measurement_icon_size_large"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textAppearance="?attr/placesTextAppearanceLabelLarge"
            android:textColor="?attr/placesColorOnSurface"
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/placesSpacingSmall"
            app:layout_constraintBottom_toTopOf="@+id/publish_time"
            app:layout_constraintStart_toEndOf="@+id/author_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>
        <TextView
            android:textAppearance="?attr/placesTextAppearanceLabelMedium"
            android:textColor="?attr/placesColorOnNeutralContainer"
            android:id="@+id/publish_time"
            android:background="@drawable/place_details_review_publish_time_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/placesSpacingSmall"
            android:paddingHorizontal="@dimen/review_publish_time_badge_horizontal_padding"
            android:paddingVertical="@dimen/review_publish_time_badge_vertical_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/author_image"
            app:layout_constraintTop_toBottomOf="@+id/author_name"/>
        <ImageView
            android:id="@+id/open_in_new_icon"
            android:layout_width="@dimen/gmp_sys_measurement_icon_size_extra_small"
            android:layout_height="@dimen/gmp_sys_measurement_icon_size_extra_small"
            android:src="@drawable/gs_open_in_new_vd_24"
            android:tint="?attr/placesColorOnSurfaceVariant"
            android:importantForAccessibility="no"
            android:layout_marginStart="?attr/placesSpacingSmall"
            app:layout_constraintBottom_toBottomOf="@+id/author_name"
            app:layout_constraintStart_toEndOf="@+id/author_name"
            app:layout_constraintTop_toTopOf="@+id/author_name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/review_options"
        android:padding="@dimen/icon_padding_for_min_touch_target_18dp_icon"
        android:layout_width="@dimen/gmp_sys_measurement_tap_target"
        android:layout_height="@dimen/gmp_sys_measurement_tap_target"
        android:src="@drawable/gs_more_vert_vd_24"
        android:tint="?attr/placesColorOnSurfaceVariant"
        android:contentDescription="@string/place_details_more_options_button_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/author_attribution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/author_attribution"/>
    <com.google.android.libraries.places.widget.internal.placedetails.RatingStarsView
        android:id="@+id/rating_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/placesSpacingLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_attribution"/>
    <TextView
        android:textAppearance="?attr/placesTextAppearanceBodyMedium"
        android:textColor="?attr/placesColorOnSurface"
        android:id="@+id/review_text"
        android:paddingTop="?attr/placesSpacingSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="?attr/placesSpacingExtraLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_stars"/>
    <TextView
        android:textAppearance="?attr/placesTextAppearanceBodySmall"
        android:textColor="?attr/placesColorOnSurfaceVariant"
        android:id="@+id/visit_date"
        android:paddingTop="?attr/placesSpacingSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="?attr/placesSpacingExtraLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_text"/>
    <TextView
        android:textAppearance="?attr/placesTextAppearanceBodySmall"
        android:textColor="?attr/placesColorOnSurface"
        android:id="@+id/translated_by_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_details_translated_by_google"/>
    <TextView
        android:textAppearance="?attr/placesTextAppearanceBodySmall"
        android:textStyle="bold"
        android:textColor="?attr/placesColorPrimary"
        android:id="@+id/see_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_details_see_original"/>
    <TextView
        android:textAppearance="?attr/placesTextAppearanceBodySmall"
        android:textStyle="bold"
        android:textColor="?attr/placesColorPrimary"
        android:id="@+id/see_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_details_see_translation"/>
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/translation_options"
        android:paddingTop="?attr/placesSpacingLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="translated_by_google,see_original,see_translation"
        app:flow_horizontalBias="0"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visit_date"/>
</androidx.constraintlayout.widget.ConstraintLayout>
